# platform-reliability-control-plane

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-project-scope.md  0002-repository-boundary-and-transport-injection.md
docs/design-drills/: month-01-service-health-model.md
src/prcp/: checker.py  exceptions.py  models.py  repository.py
src/prcp/api/: dependencies.py  errors.py  main.py  schemas.py
tests/: conftest.py  test_checker.py  test_models.py  test_repository.py
tests/api/: test_dependencies.py  test_errors.py  test_fastapi_health.py  test_services.py
