[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-reliability-control-plane"
version = "0.1.0"
description = "A platform reliability control plane for release and environment health gates."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
